Fixed annoying whitespace on right of website

--- a/src/app/ad-banner/ad-banner.component.scss
+++ b/src/app/ad-banner/ad-banner.component.scss
@@ -1,8 +1,8 @@
 .ad-banner {
     height: 100%;
-    width: 8vw;
-    padding-left: 1vw;
-    padding-right: 1vw;
+    width: 100%;
+    padding-left: 5%;
+    padding-right: 5%;
 
     .ad-banner-content {
         display: flex;
