--- a/src/app/chat-window/chat-window.component.scss
+++ b/src/app/chat-window/chat-window.component.scss
@@ -4,7 +4,7 @@
   flex: 1;
   display: flex;
   flex-direction: column;
-  width: 55vw;
+  width: 50vw;
   height: 100%;
   border-bottom: 1px solid var(--mat-sys-outline);
   border-right: 1px solid var(--mat-sys-outline);
